# lepp2

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  lola-sample-cfg.toml
examples/: Examples.txt  file_stream_example.cc  live_stream_example.cc
src/: CMakeLists.txt
src/lepp2/: BaseObstacleDetector.hpp  BaseSegmenter.hpp  BaseVideoSource.hpp  CoordinateTransformer.hpp  DiffAggregator.hpp  EuclideanPlaneSegmenter.hpp  FilteredVideoSource.hpp  GrabberVideoSource.hpp  MomentOfInertiaApproximator.hpp  NoopSegmenter.hpp  ObjectApproximator.hpp  ObstacleAggregator.hpp  SmoothObstacleAggregator.hpp  SplitApproximator.hpp  StairAggregator.hpp  StairDetector.hpp  StairSegmenter.hpp
src/lepp2/debug/: timer.hpp
src/lepp2/detector/: main.cc
src/lepp2/filter/: PointFilter.hpp  SensorCalibrationFilter.hpp  TruncateFilter.hpp
src/lepp2/legacy/: Algorithm.hpp  EuclideanPlaneSegmentation.cpp  EuclideanPlaneSegmentation.hpp  FittingAlgorithm.hpp  Fitting_no_Estimation.cpp  Fitting_no_Estimation.hpp  IdentificationAlgorithm.hpp  MomentOfInertiaIdentification.cpp  MomentOfInertiaIdentification.hpp  PCLWrapper.hpp  Preallocator.hpp  SegmentationAlgorithm.hpp  moment_of_inertia_estimation.h  moment_of_inertia_estimation.hpp
src/lepp2/legacy/models/: CylinderModel.hpp  ObjectModel.hpp  SphereModel.hpp  TriangleModel.hpp
src/lepp2/lola/: LolaAggregator.hpp  OdoCoordinateTransformer.hpp
src/lepp2/models/: Coordinate.h  ObjectModel.h
src/lepp2/visualization/: EchoObserver.hpp  ObstacleVisualizer.hpp  StairVisualizer.hpp
src/lola/: LolaAggregator.cc  LolaAggregator.h  LolaAggregator.hpp  OdoCoordinateTransformer.hpp  PoseService.cc  PoseService.h  Robot.cc  Robot.h  RobotService.cc  RobotService.h  Splitters.hpp  vis.cc
